# PythonCookiecutter

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
