[metadata]
name = {{ cookiecutter.package_name }}
description = {{ cookiecutter.project_short_description }}
author = {{ cookiecutter.author_name}}
author_email = {{ cookiecutter.author_email}}
url = {{ cookiecutter.repository_url }}
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}.__main__:main
